--- a/posts/package.json
+++ b/posts/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-restore-scroll": "0.0.1",
     "react-scripts": "4.0.0",
+    "react-scroll-manager": "^1.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
