--- a/posts/package.json
+++ b/posts/package.json
@@ -9,11 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-db-google-sheets": "^2.1.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.2.1",
+    "react-helmet": "^6.1.0",
+    "react-moment": "^1.0.0",
+    "react-owl-carousel": "^2.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-restore-scroll": "0.0.1",
